--- a/app/javascript/mastodon/locales/hu.json
+++ b/app/javascript/mastodon/locales/hu.json
@@ -7,7 +7,7 @@
   "account.followers": "Követők",
   "account.follows": "Követve",
   "account.follows_you": "Követnek téged",
-  "account.hide_reblogs": "@{name} kedvenceinek elrejtése",
+  "account.hide_reblogs": "Rejtsd el a tülkölést @{name}-tól/től",
   "account.media": "Média",
   "account.mention": "@{name} említése",
   "account.moved_to": "{name} átköltözött:",
