--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -19,7 +19,7 @@
   "account.requested": "フォロー承認待ちです。クリックしてキャンセル",
   "account.share": "@{name}さんのプロフィールを共有する",
   "account.show_reblogs": "@{name}さんからのブーストを表示",
-  "account.unblock": "@{name}さんのブロック解除",
+  "account.unblock": "@{name}さんのブロックを解除",
   "account.unblock_domain": "{domain}を表示",
   "account.unfollow": "フォロー解除",
   "account.unmute": "@{name}さんのミュートを解除",
@@ -68,7 +68,7 @@
   "confirmations.delete_list.confirm": "削除",
   "confirmations.delete_list.message": "本当にこのリストを完全に削除しますか？",
   "confirmations.domain_block.confirm": "ドメイン全体を非表示",
-  "confirmations.domain_block.message": "本当に{domain}全体を非表示にしますか？　多くの場合は個別にブロックやミュートするだけで充分であり、また好ましいです。",
+  "confirmations.domain_block.message": "本当に{domain}全体を非表示にしますか？ 多くの場合は個別にブロックやミュートするだけで充分であり、また好ましいです。",
   "confirmations.mute.confirm": "ミュート",
   "confirmations.mute.message": "本当に{name}さんをミュートしますか？",
   "confirmations.unfollow.confirm": "フォロー解除",
@@ -201,7 +201,7 @@
   "privacy.unlisted.long": "公開TLで表示しない",
   "privacy.unlisted.short": "未収載",
   "regeneration_indicator.label": "読み込み中…",
-  "regeneration_indicator.sublabel": "ホームタイムラインは準備中です!",
+  "regeneration_indicator.sublabel": "ホームタイムラインは準備中です！",
   "relative_time.days": "{number}日前",
   "relative_time.hours": "{number}時間前",
   "relative_time.just_now": "今",
