--- a/app/javascript/mastodon/locales/sk.json
+++ b/app/javascript/mastodon/locales/sk.json
@@ -4,7 +4,7 @@
   "account.disclaimer_full": "Inofrmácie nižšie nemusia byť úplným odrazom uživateľovho účtu.",
   "account.edit_profile": "Upraviť profil",
   "account.follow": "Následovať",
-  "account.followers": "Následovaťelia",
+  "account.followers": "Sledujúci",
   "account.follows": "Sledujete",
   "account.follows_you": "Následuje vás",
   "account.hide_reblogs": "Skryť povýšenia od @{name}",
@@ -13,7 +13,7 @@
   "account.moved_to": "{name} sa presunul/a na:",
   "account.mute": "Ignorovať @{name}",
   "account.mute_notifications": "Stĺmiť notifikácie od @{name}",
-  "account.posts": "Správy",
+  "account.posts": "Hlášky",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "Nahlásiť @{name}",
   "account.requested": "Čaká na schválenie. Kliknite pre zrušenie žiadosti",
@@ -73,7 +73,7 @@
   "confirmations.mute.message": "Naozaj chcete ignorovať {name}?",
   "confirmations.unfollow.confirm": "Nesledovať",
   "confirmations.unfollow.message": "Naozaj chcete prestať sledovať {name}?",
-  "embed.instructions": "Skopírujte kód uvedený nižšie pre pridanie tohto statusu na vašu web stránku.",
+  "embed.instructions": "Umiestnite kód uvedený nižšie pre pridanie tohto statusu na vašu web stránku.",
   "embed.preview": "Tu je ako to bude vyzerať:",
   "emoji_button.activity": "Aktivita",
   "emoji_button.custom": "Vlastné",
@@ -101,7 +101,7 @@
   "getting_started.appsshort": "Aplikácie",
   "getting_started.faq": "FAQ",
   "getting_started.heading": "Začíname",
-  "getting_started.open_source_notice": "Mastodon má otvorený kód. Nahlásiť chyby, alebo prispievať vlastným kódom môžeš na GitHube v {github}.",
+  "getting_started.open_source_notice": "Mastodon má otvorený kód. Nahlásiť chyby, alebo prispievať vlastným kódom môžete na GitHube v {github}.",
   "getting_started.userguide": "Používateľská príručka",
   "home.column_settings.advanced": "Rozšírené",
   "home.column_settings.basic": "Základné",
@@ -123,11 +123,11 @@
   "keyboard_shortcuts.mention": "spomenúť autora",
   "keyboard_shortcuts.reply": "odpovedať",
   "keyboard_shortcuts.search": "zamerať sa na vyhľadávanie",
-  "keyboard_shortcuts.toot": "začať úplne nový toot",
-  "keyboard_shortcuts.unfocus": "to un-focus compose textarea/search",
+  "keyboard_shortcuts.toot": "začať úplne novú hlášku",
+  "keyboard_shortcuts.unfocus": "nesústrediť sa na písaciu plochu, alebo hľadanie",
   "keyboard_shortcuts.up": "posunúť sa vyššie v zozname",
   "lightbox.close": "Zatvoriť",
-  "lightbox.next": "Ďalší",
+  "lightbox.next": "Ďalšie",
   "lightbox.previous": "Predchádzajúci",
   "lists.account.add": "Pridať do zoznamu",
   "lists.account.remove": "Odobrať zo zoznamu",
@@ -160,10 +160,10 @@
   "notification.mention": "{name} vás spomenul",
   "notification.reblog": "{name} re-tootol tvoj status",
   "notifications.clear": "Vyčistiť zoznam notifikácii",
-  "notifications.clear_confirmation": "Naozaj chcete nenávratne vymazať všetky vaše notifikácie?",
+  "notifications.clear_confirmation": "Naozaj chcete nenávratne prečistiť všetky vaše notifikácie?",
   "notifications.column_settings.alert": "Notifikácie na ploche",
   "notifications.column_settings.favourite": "Obľúbené:",
-  "notifications.column_settings.follow": "Nový nasledujúci:",
+  "notifications.column_settings.follow": "Noví následujúci:",
   "notifications.column_settings.mention": "Zmienenia:",
   "notifications.column_settings.push": "Push notifikácie",
   "notifications.column_settings.push_meta": "Toto zariadenie",
@@ -176,7 +176,7 @@
   "onboarding.page_four.home": "Domovská časová os zobrazí správy od ľudí ktorých sledujete.",
   "onboarding.page_four.notifications": "Stĺpec s notifikáciami zobrazí keď budete s niekým komunikovať.",
   "onboarding.page_one.federation": "Mastodon je sieť nezávislých serverov, spojením ktorých vzniká jedna veľká federovaná sociálna sieť.",
-  "onboarding.page_one.full_handle": "Your full handle",
+  "onboarding.page_one.full_handle": "Vaša celá prezývka aj s adresou",
   "onboarding.page_one.handle_hint": "Toto je čo by ste povedali vaším priateľom že majú hľadať.",
   "onboarding.page_one.welcome": "Vitajte na Mastodone!",
   "onboarding.page_six.admin": "Správca tohto servera je {admin}.",
@@ -194,7 +194,7 @@
   "privacy.change": "Zmeňiť viditeľnosť statusu",
   "privacy.direct.long": "Poslať priamo iba spomenutým používateľom",
   "privacy.direct.short": "Súkromne",
-  "privacy.private.long": "Poslať iba sledujúcim",
+  "privacy.private.long": "Poslať iba následovateľom",
   "privacy.private.short": "Iba pre sledujúcich",
   "privacy.public.long": "Poslať všetkým verejne",
   "privacy.public.short": "Verejné",
@@ -215,8 +215,8 @@
   "report.submit": "Poslať",
   "report.target": "Nahlásenie {target}",
   "search.placeholder": "Hľadať",
-  "search_popout.search_format": "Pokročilý tvar vyhľadávania",
-  "search_popout.tips.hashtag": "hashtag",
+  "search_popout.search_format": "Pokročilý formát vyhľadávania",
+  "search_popout.tips.hashtag": "haštag",
   "search_popout.tips.status": "status",
   "search_popout.tips.text": "Jednoduchý text vráti zhodujúce sa mená, prezývky a hashtagy",
   "search_popout.tips.user": "používateľ",
@@ -228,9 +228,9 @@
   "status.block": "Blokovať @{name}",
   "status.cannot_reblog": "Tento príspevok nemôže byť re-tootnutý",
   "status.delete": "Zmazať",
-  "status.embed": "Embed",
+  "status.embed": "Vložiť",
   "status.favourite": "Páči sa mi",
-  "status.load_more": "Zobraziť viac",
+  "status.load_more": "Zobraz viac",
   "status.media_hidden": "Skryté médiá",
   "status.mention": "Napísať @{name}",
   "status.more": "Viac",
@@ -246,8 +246,8 @@
   "status.sensitive_toggle": "Kliknite pre zobrazenie",
   "status.sensitive_warning": "Chúlostivý obsah",
   "status.share": "Zdieľať",
-  "status.show_less": "Zobraziť menej",
-  "status.show_more": "Zobraziť viac",
+  "status.show_less": "Zobraz menej",
+  "status.show_more": "Zobraz viac",
   "status.unmute_conversation": "Prestať ignorovať konverzáciu",
   "status.unpin": "Odopnúť z profilu",
   "tabs_bar.compose": "Napísať",
