i18n: Update Polish translation (#6632)
Signed-off-by: Marcin Mikołajczak <me@m4sk.in>

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -371,6 +371,7 @@ pl:
     logout: Wyloguj się
     migrate_account: Przenieś konto
     migrate_account_html: Jeżeli chcesz skonfigurować przekierowanie z obecnego konta na inne, możesz <a href="%{path}">skonfigurować to tutaj</a>.
+    or: lub
     or_log_in_with: Lub zaloguj się z użyciem
     providers:
       cas: CAS
