--- a/app/javascript/mastodon/locales/ca.json
+++ b/app/javascript/mastodon/locales/ca.json
@@ -1,6 +1,7 @@
 {
   "account.block": "Bloca @{name}",
   "account.block_domain": "Amaga-ho tot de {domain}",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "La informació següent pot reflectir incompleta el perfil de l'usuari.",
   "account.edit_profile": "Edita el perfil",
   "account.follow": "Segueix",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name} s'ha mogut a:",
   "account.mute": "Silencia @{name}",
   "account.mute_notifications": "Notificacions desactivades de @{name}",
+  "account.muted": "Muted",
   "account.posts": "Toots",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "Informe @{name}",
@@ -216,6 +218,7 @@
   "report.target": "Informes",
   "search.placeholder": "Cercar",
   "search_popout.search_format": "Format de cerca avançada",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "etiqueta",
   "search_popout.tips.status": "status",
   "search_popout.tips.text": "El text simple retorna coincidències amb els noms de visualització, els noms d'usuari i els hashtags",
@@ -238,6 +241,7 @@
   "status.mute_conversation": "Silenciar conversació",
   "status.open": "Ampliar aquest estat",
   "status.pin": "Fixat en el perfil",
+  "status.pinned": "Pinned toot",
   "status.reblog": "Impuls",
   "status.reblogged_by": "{name} ha retootejat",
   "status.reply": "Respondre",
@@ -250,7 +254,6 @@
   "status.show_more": "Mostra més",
   "status.unmute_conversation": "Activar conversació",
   "status.unpin": "Deslliga del perfil",
-  "tabs_bar.compose": "Compondre",
   "tabs_bar.federated_timeline": "Federada",
   "tabs_bar.home": "Inici",
   "tabs_bar.local_timeline": "Local",
