--- a/app/javascript/mastodon/locales/ko.json
+++ b/app/javascript/mastodon/locales/ko.json
@@ -1,6 +1,7 @@
 {
   "account.block": "@{name}을 차단",
   "account.block_domain": "{domain} 전체를 숨김",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "여기 있는 정보는 유저의 프로파일을 정확히 반영하지 못 할 수도 있습니다.",
   "account.edit_profile": "프로필 편집",
   "account.follow": "팔로우",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name}는 계정을 이동했습니다:",
   "account.mute": "@{name} 뮤트",
   "account.mute_notifications": "@{name}의 알림을 뮤트",
+  "account.muted": "Muted",
   "account.posts": "게시물",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "@{name} 신고",
@@ -239,6 +241,7 @@
   "status.mute_conversation": "이 대화를 뮤트",
   "status.open": "상세 정보 표시",
   "status.pin": "고정",
+  "status.pinned": "Pinned toot",
   "status.reblog": "부스트",
   "status.reblogged_by": "{name}님이 부스트 했습니다",
   "status.reply": "답장",
