--- a/app/javascript/mastodon/locales/sk.json
+++ b/app/javascript/mastodon/locales/sk.json
@@ -1,6 +1,7 @@
 {
   "account.block": "Blokovať @{name}",
   "account.block_domain": "Ukryť všetko z {domain}",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "Inofrmácie nižšie nemusia byť úplným odrazom uživateľovho účtu.",
   "account.edit_profile": "Upraviť profil",
   "account.follow": "Následovať",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name} sa presunul/a na:",
   "account.mute": "Ignorovať @{name}",
   "account.mute_notifications": "Stĺmiť notifikácie od @{name}",
+  "account.muted": "Muted",
   "account.posts": "Hlášky",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "Nahlásiť @{name}",
@@ -216,6 +218,7 @@
   "report.target": "Nahlásenie {target}",
   "search.placeholder": "Hľadať",
   "search_popout.search_format": "Pokročilý formát vyhľadávania",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "haštag",
   "search_popout.tips.status": "status",
   "search_popout.tips.text": "Jednoduchý text vráti zhodujúce sa mená, prezývky a hashtagy",
@@ -238,6 +241,7 @@
   "status.mute_conversation": "Ignorovať konverzáciu",
   "status.open": "Otvoriť tento status",
   "status.pin": "Pripnúť na profil",
+  "status.pinned": "Pinned toot",
   "status.reblog": "Povýšiť",
   "status.reblogged_by": "{name} povýšil",
   "status.reply": "Odpovedať",
@@ -250,7 +254,6 @@
   "status.show_more": "Zobraz viac",
   "status.unmute_conversation": "Prestať ignorovať konverzáciu",
   "status.unpin": "Odopnúť z profilu",
-  "tabs_bar.compose": "Napísať",
   "tabs_bar.federated_timeline": "Federovaná",
   "tabs_bar.home": "Domov",
   "tabs_bar.local_timeline": "Lokálna",
