--- a/app/javascript/mastodon/locales/ar.json
+++ b/app/javascript/mastodon/locales/ar.json
@@ -1,6 +1,7 @@
 {
   "account.block": "حظر @{name}",
   "account.block_domain": "إخفاء كل شيئ قادم من إسم النطاق {domain}",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "قد لا تعكس المعلومات أدناه الملف الشخصي الكامل للمستخدم.",
   "account.edit_profile": "تعديل الملف الشخصي",
   "account.follow": "تابِع",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name} إنتقل إلى :",
   "account.mute": "أكتم @{name}",
   "account.mute_notifications": "كتم إخطارات @{name}",
+  "account.muted": "Muted",
   "account.posts": "التبويقات",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "أبلغ عن @{name}",
@@ -216,6 +218,7 @@
   "report.target": "إبلاغ",
   "search.placeholder": "ابحث",
   "search_popout.search_format": "نمط البحث المتقدم",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "وسم",
   "search_popout.tips.status": "حالة",
   "search_popout.tips.text": "جملة قصيرة تُمكّنُك من عرض أسماء و حسابات و كلمات رمزية",
@@ -238,6 +241,7 @@
   "status.mute_conversation": "كتم المحادثة",
   "status.open": "وسع هذه المشاركة",
   "status.pin": "تدبيس على الملف الشخصي",
+  "status.pinned": "Pinned toot",
   "status.reblog": "رَقِّي",
   "status.reblogged_by": "{name} رقى",
   "status.reply": "ردّ",
@@ -250,7 +254,6 @@
   "status.show_more": "أظهر المزيد",
   "status.unmute_conversation": "فك الكتم عن المحادثة",
   "status.unpin": "فك التدبيس من الملف الشخصي",
-  "tabs_bar.compose": "تحرير",
   "tabs_bar.federated_timeline": "الموحَّد",
   "tabs_bar.home": "الرئيسية",
   "tabs_bar.local_timeline": "المحلي",
