--- a/app/javascript/mastodon/locales/eo.json
+++ b/app/javascript/mastodon/locales/eo.json
@@ -1,6 +1,7 @@
 {
   "account.block": "Bloki @{name}",
   "account.block_domain": "Kaŝi ĉion de {domain}",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "Subaj informoj povas reflekti la profilon de la uzanto nekomplete.",
   "account.edit_profile": "Redakti profilon",
   "account.follow": "Sekvi",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name} moviĝis al:",
   "account.mute": "Silentigi @{name}",
   "account.mute_notifications": "Silentigi sciigojn el @{name}",
+  "account.muted": "Muted",
   "account.posts": "Hupoj",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "Signali @{name}",
@@ -216,6 +218,7 @@
   "report.target": "Signali {target}",
   "search.placeholder": "Serĉi",
   "search_popout.search_format": "Detala serĉo",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "kradvorto",
   "search_popout.tips.status": "mesaĝoj",
   "search_popout.tips.text": "Simpla teksto montras la kongruajn afiŝitajn nomojn, uzantnomojn kaj kradvortojn",
@@ -238,6 +241,7 @@
   "status.mute_conversation": "Silentigi konversacion",
   "status.open": "Grandigi ĉi tiun mesaĝon",
   "status.pin": "Alpingli en la profilo",
+  "status.pinned": "Pinned toot",
   "status.reblog": "Diskonigi",
   "status.reblogged_by": "{name} diskonigis",
   "status.reply": "Respondi",
@@ -250,7 +254,6 @@
   "status.show_more": "Grandigi",
   "status.unmute_conversation": "Malsilentigi konversacion",
   "status.unpin": "Depingli de profilo",
-  "tabs_bar.compose": "Ekskribi",
   "tabs_bar.federated_timeline": "Fratara tempolinio",
   "tabs_bar.home": "Hejmo",
   "tabs_bar.local_timeline": "Loka tempolinio",
