--- a/app/javascript/mastodon/locales/fr.json
+++ b/app/javascript/mastodon/locales/fr.json
@@ -1,6 +1,7 @@
 {
   "account.block": "Bloquer @{name}",
   "account.block_domain": "Tout masquer venant de {domain}",
+  "account.blocked": "Blocked",
   "account.disclaimer_full": "Les données ci-dessous peuvent ne pas refléter ce profil dans sa totalité.",
   "account.edit_profile": "Modifier le profil",
   "account.follow": "Suivre",
@@ -13,6 +14,7 @@
   "account.moved_to": "{name} a déménagé vers :",
   "account.mute": "Masquer @{name}",
   "account.mute_notifications": "Ignorer les notifications de @{name}",
+  "account.muted": "Muted",
   "account.posts": "Statuts",
   "account.posts_with_replies": "Toots with replies",
   "account.report": "Signaler",
@@ -216,6 +218,7 @@
   "report.target": "Signalement",
   "search.placeholder": "Rechercher",
   "search_popout.search_format": "Recherche avancée",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "hashtag",
   "search_popout.tips.status": "statuts",
   "search_popout.tips.text": "Un texte simple renvoie les noms affichés, les noms d’utilisateur⋅ice et les hashtags correspondants",
@@ -238,6 +241,7 @@
   "status.mute_conversation": "Masquer la conversation",
   "status.open": "Déplier ce statut",
   "status.pin": "Épingler sur le profil",
+  "status.pinned": "Pinned toot",
   "status.reblog": "Partager",
   "status.reblogged_by": "{name} a partagé :",
   "status.reply": "Répondre",
@@ -250,7 +254,6 @@
   "status.show_more": "Déplier",
   "status.unmute_conversation": "Ne plus masquer la conversation",
   "status.unpin": "Retirer du profil",
-  "tabs_bar.compose": "Composer",
   "tabs_bar.federated_timeline": "Fil public global",
   "tabs_bar.home": "Accueil",
   "tabs_bar.local_timeline": "Fil public local",
