--- a/app/javascript/mastodon/locales/eo.json
+++ b/app/javascript/mastodon/locales/eo.json
@@ -15,8 +15,8 @@
   "account.mute": "Silentigi @{name}",
   "account.mute_notifications": "Silentigi sciigojn el @{name}",
   "account.muted": "Muted",
-  "account.posts": "Hupoj",
-  "account.posts_with_replies": "Toots with replies",
+  "account.posts": "Mesaĝoj",
+  "account.posts_with_replies": "Mesaĝoj kun respondoj",
   "account.report": "Signali @{name}",
   "account.requested": "Atendo de aprobo. Alklaku por nuligi peton de sekvado",
   "account.share": "Diskonigi la profilon de @{name}",
@@ -149,7 +149,7 @@
   "navigation_bar.edit_profile": "Redakti profilon",
   "navigation_bar.favourites": "Stelumoj",
   "navigation_bar.follow_requests": "Petoj de sekvado",
-  "navigation_bar.info": "Pri ĉiu tiu nodo",
+  "navigation_bar.info": "Pri ĉi tiu nodo",
   "navigation_bar.keyboard_shortcuts": "Klavaraj mallongigoj",
   "navigation_bar.lists": "Listoj",
   "navigation_bar.logout": "Elsaluti",
@@ -210,9 +210,9 @@
   "relative_time.minutes": "{number}m",
   "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "Nuligi",
-  "report.forward": "Forward to {target}",
-  "report.forward_hint": "The account is from another server. Send an anonymized copy of the report there as well?",
-  "report.hint": "The report will be sent to your instance moderators. You can provide an explanation of why you are reporting this account below:",
+  "report.forward": "Plusendi al {target}",
+  "report.forward_hint": "La konto estas en alia servilo. Ĉu sendi sennomigitan kopion de la signalo ankaŭ tien?",
+  "report.hint": "La signalo estos sendita al la kontrolantoj de via nodo. Vi povas doni klarigon pri kial vi signalas ĉi tiun konton sube:",
   "report.placeholder": "Pliaj komentoj",
   "report.submit": "Sendi",
   "report.target": "Signali {target}",
@@ -223,9 +223,9 @@
   "search_popout.tips.status": "mesaĝoj",
   "search_popout.tips.text": "Simpla teksto montras la kongruajn afiŝitajn nomojn, uzantnomojn kaj kradvortojn",
   "search_popout.tips.user": "uzanto",
-  "search_results.accounts": "People",
-  "search_results.hashtags": "Hashtags",
-  "search_results.statuses": "Toots",
+  "search_results.accounts": "Homoj",
+  "search_results.hashtags": "Kradvortoj",
+  "search_results.statuses": "Mesaĝoj",
   "search_results.total": "{count, number} {count, plural, one {rezulto} other {rezultoj}}",
   "standalone.public_title": "Enrigardo…",
   "status.block": "Bloki @{name}",
@@ -262,7 +262,7 @@
   "upload_area.title": "Altreni kaj lasi por alŝuti",
   "upload_button.label": "Aldoni aŭdovidaĵon",
   "upload_form.description": "Priskribi por misvidantaj homoj",
-  "upload_form.focus": "Crop",
+  "upload_form.focus": "Stuci",
   "upload_form.undo": "Malfari",
   "upload_progress.label": "Alŝutado…",
   "video.close": "Fermi videon",
