--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -16,7 +16,7 @@
   "account.mute_notifications": "@{name}さんからの通知を受け取らない",
   "account.muted": "Muted",
   "account.posts": "投稿",
-  "account.posts_with_replies": "トゥートと返信",
+  "account.posts_with_replies": "投稿と返信",
   "account.report": "@{name}さんを通報",
   "account.requested": "フォロー承認待ちです。クリックしてキャンセル",
   "account.share": "@{name}さんのプロフィールを共有する",
