--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -553,7 +553,9 @@ pl:
           trillion: T
           unit: ''
   pagination:
+    newer: Nowsze
     next: Następna
+    older: Starsze
     prev: Poprzednia
     truncate: "&hellip;"
   preferences:
