--- a/app/javascript/mastodon/locales/ar.json
+++ b/app/javascript/mastodon/locales/ar.json
@@ -16,7 +16,7 @@
   "account.mute_notifications": "كتم إخطارات @{name}",
   "account.muted": "Muted",
   "account.posts": "التبويقات",
-  "account.posts_with_replies": "Toots with replies",
+  "account.posts_with_replies": "تبويقات تحتوي على رُدود",
   "account.report": "أبلغ عن @{name}",
   "account.requested": "في انتظار الموافقة",
   "account.share": "مشاركة @{name}'s profile",
@@ -210,8 +210,8 @@
   "relative_time.minutes": "{number}m",
   "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "إلغاء",
-  "report.forward": "Forward to {target}",
-  "report.forward_hint": "The account is from another server. Send an anonymized copy of the report there as well?",
+  "report.forward": "التحويل إلى {target}",
+  "report.forward_hint": "هذا الحساب ينتمي إلى خادوم آخَر. هل تودّ إرسال نسخة مجهولة مِن التقرير إلى هنالك أيضًا ؟",
   "report.hint": "The report will be sent to your instance moderators. You can provide an explanation of why you are reporting this account below:",
   "report.placeholder": "تعليقات إضافية",
   "report.submit": "إرسال",
@@ -223,9 +223,9 @@
   "search_popout.tips.status": "حالة",
   "search_popout.tips.text": "جملة قصيرة تُمكّنُك من عرض أسماء و حسابات و كلمات رمزية",
   "search_popout.tips.user": "مستخدِم",
-  "search_results.accounts": "People",
-  "search_results.hashtags": "Hashtags",
-  "search_results.statuses": "Toots",
+  "search_results.accounts": "أشخاص",
+  "search_results.hashtags": "الوُسوم",
+  "search_results.statuses": "التبويقات",
   "search_results.total": "{count, number} {count, plural, one {result} و {results}}",
   "standalone.public_title": "نظرة على ...",
   "status.block": "Block @{name}",
@@ -262,7 +262,7 @@
   "upload_area.title": "إسحب ثم أفلت للرفع",
   "upload_button.label": "إضافة وسائط",
   "upload_form.description": "وصف للمعاقين بصريا",
-  "upload_form.focus": "Crop",
+  "upload_form.focus": "قص",
   "upload_form.undo": "إلغاء",
   "upload_progress.label": "يرفع...",
   "video.close": "إغلاق الفيديو",
