--- a/app/javascript/mastodon/locales/sk.json
+++ b/app/javascript/mastodon/locales/sk.json
@@ -7,7 +7,7 @@
   "account.follow": "Následovať",
   "account.followers": "Sledujúci",
   "account.follows": "Sledujete",
-  "account.follows_you": "Následuje vás",
+  "account.follows_you": "Následuje ťa",
   "account.hide_reblogs": "Skryť povýšenia od @{name}",
   "account.media": "Médiá",
   "account.mention": "Spomeňte @{name}",
@@ -16,7 +16,7 @@
   "account.mute_notifications": "Stĺmiť notifikácie od @{name}",
   "account.muted": "Muted",
   "account.posts": "Hlášky",
-  "account.posts_with_replies": "Toots with replies",
+  "account.posts_with_replies": "Príspevky s odpoveďami",
   "account.report": "Nahlásiť @{name}",
   "account.requested": "Čaká na schválenie. Kliknite pre zrušenie žiadosti",
   "account.share": "Zdieľať @{name} profil",
@@ -158,8 +158,8 @@
   "navigation_bar.preferences": "Možnosti",
   "navigation_bar.public_timeline": "Federovaná časová os",
   "notification.favourite": "{name} sa páči tvoj status",
-  "notification.follow": "{name} vás začal(a) sledovať",
-  "notification.mention": "{name} vás spomenul",
+  "notification.follow": "{name} ťa začal/a následovať",
+  "notification.mention": "{name} ťa spomenul/a",
   "notification.reblog": "{name} re-tootol tvoj status",
   "notifications.clear": "Vyčistiť zoznam notifikácii",
   "notifications.clear_confirmation": "Naozaj chcete nenávratne prečistiť všetky vaše notifikácie?",
@@ -210,9 +210,9 @@
   "relative_time.minutes": "{number}m",
   "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "Zrušiť",
-  "report.forward": "Forward to {target}",
-  "report.forward_hint": "The account is from another server. Send an anonymized copy of the report there as well?",
-  "report.hint": "The report will be sent to your instance moderators. You can provide an explanation of why you are reporting this account below:",
+  "report.forward": "Posuň ku {target}",
+  "report.forward_hint": "Tento účet je z iného serveru. Chceš poslať anonymnú kópiu reportu aj tam?",
+  "report.hint": "Toto nahlásenie bude zaslané správcom servera. Môžeš napísať odvôvodnenie prečo si nahlásil/a tento účet:",
   "report.placeholder": "Ďalšie komentáre",
   "report.submit": "Poslať",
   "report.target": "Nahlásenie {target}",
@@ -223,9 +223,9 @@
   "search_popout.tips.status": "status",
   "search_popout.tips.text": "Jednoduchý text vráti zhodujúce sa mená, prezývky a hashtagy",
   "search_popout.tips.user": "používateľ",
-  "search_results.accounts": "People",
-  "search_results.hashtags": "Hashtags",
-  "search_results.statuses": "Toots",
+  "search_results.accounts": "Ľudia",
+  "search_results.hashtags": "Haštagy",
+  "search_results.statuses": "Príspevky",
   "search_results.total": "{count, number} {count, plural, one {result} ostatné {results}}",
   "standalone.public_title": "Pohľad dovnútra...",
   "status.block": "Blokovať @{name}",
@@ -262,7 +262,7 @@
   "upload_area.title": "Ťahaj a pusti pre nahratie",
   "upload_button.label": "Pridať médiá",
   "upload_form.description": "Opis pre slabo vidiacich",
-  "upload_form.focus": "Crop",
+  "upload_form.focus": "Vystrihni",
   "upload_form.undo": "Navrátiť",
   "upload_progress.label": "Nahráva sa...",
   "video.close": "Zavrieť video",
