i18n: Update Polish translation and “yarn manage:translations” (#6743)
Signed-off-by: Marcin Mikołajczak <me@m4sk.in>

--- a/app/javascript/mastodon/locales/ar.json
+++ b/app/javascript/mastodon/locales/ar.json
@@ -252,7 +252,9 @@
   "status.sensitive_warning": "محتوى حساس",
   "status.share": "مشاركة",
   "status.show_less": "إعرض أقلّ",
+  "status.show_less_all": "Show less for all",
   "status.show_more": "أظهر المزيد",
+  "status.show_more_all": "Show more for all",
   "status.unmute_conversation": "فك الكتم عن المحادثة",
   "status.unpin": "فك التدبيس من الملف الشخصي",
   "tabs_bar.federated_timeline": "الموحَّد",
