--- a/app/javascript/mastodon/locales/fi.json
+++ b/app/javascript/mastodon/locales/fi.json
@@ -252,7 +252,9 @@
   "status.sensitive_warning": "Arkaluontoista sisältöä",
   "status.share": "Jaa",
   "status.show_less": "Näytä vähemmän",
+  "status.show_less_all": "Show less for all",
   "status.show_more": "Näytä lisää",
+  "status.show_more_all": "Show more for all",
   "status.unmute_conversation": "Poista mykistys keskustelulta",
   "status.unpin": "Irrota profiilista",
   "tabs_bar.federated_timeline": "Federated",
