--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -252,7 +252,9 @@
   "status.sensitive_warning": "閲覧注意",
   "status.share": "共有",
   "status.show_less": "隠す",
+  "status.show_less_all": "Show less for all",
   "status.show_more": "もっと見る",
+  "status.show_more_all": "Show more for all",
   "status.unmute_conversation": "会話のミュートを解除",
   "status.unpin": "プロフィールの固定表示を解除",
   "tabs_bar.federated_timeline": "連合",
