--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -3,7 +3,7 @@
   "account.block_domain": "{domain}全体を非表示",
   "account.blocked": "ブロック済み",
   "account.disclaimer_full": "以下の情報は不正確な可能性があります。",
-  "account.domain_blocked": "Domain hidden",
+  "account.domain_blocked": "ドメイン非表示中",
   "account.edit_profile": "プロフィールを編集",
   "account.follow": "フォロー",
   "account.followers": "フォロワー",
