--- a/app/javascript/mastodon/locales/sk.json
+++ b/app/javascript/mastodon/locales/sk.json
@@ -217,8 +217,8 @@
   "report.placeholder": "Ďalšie komentáre",
   "report.submit": "Poslať",
   "report.target": "Nahlásenie {target}",
-  "search.placeholder": "Hľadať",
-  "search_popout.search_format": "Pokročilý formát vyhľadávania",
+  "search.placeholder": "Hľadaj",
+  "search_popout.search_format": "Pokročilé vyhľadávanie",
   "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "haštag",
   "search_popout.tips.status": "status",
