Change the title of spoiler button by state
The title will give the precise representation of the current state. It
would be helpful for blind people.

--- a/app/javascript/mastodon/locales/ca.json
+++ b/app/javascript/mastodon/locales/ca.json
@@ -61,7 +61,8 @@
   "compose_form.publish": "Toot",
   "compose_form.publish_loud": "{publish}!",
   "compose_form.sensitive": "Marca el contingut multimèdia com a sensible",
-  "compose_form.spoiler": "Amaga el text darrera darrere un avís",
+  "compose_form.spoiler.marked": "Text is hidden behind warning",
+  "compose_form.spoiler.unmarked": "Text is not hidden",
   "compose_form.spoiler_placeholder": "Escriu l'avís aquí",
   "confirmation_modal.cancel": "Cancel·la",
   "confirmations.block.confirm": "Bloca",
