--- a/app/javascript/mastodon/locales/hy.json
+++ b/app/javascript/mastodon/locales/hy.json
@@ -61,7 +61,8 @@
   "compose_form.publish": "Թթել",
   "compose_form.publish_loud": "Թթե՜լ",
   "compose_form.sensitive": "Նշել բովանդակությունը որպես կասկածելի",
-  "compose_form.spoiler": "Թաքցնել տեքստը նախազգուշացման ետեւում",
+  "compose_form.spoiler.marked": "Text is hidden behind warning",
+  "compose_form.spoiler.unmarked": "Text is not hidden",
   "compose_form.spoiler_placeholder": "Գրիր նախազգուշացումդ այստեղ",
   "confirmation_modal.cancel": "Չեղարկել",
   "confirmations.block.confirm": "Արգելափակել",
