--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -61,7 +61,8 @@
   "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive": "メディアを閲覧注意としてマークする",
-  "compose_form.spoiler": "テキストを隠す",
+  "compose_form.spoiler.marked": "Text is hidden behind warning",
+  "compose_form.spoiler.unmarked": "Text is not hidden",
   "compose_form.spoiler_placeholder": "ここに警告を書いてください",
   "confirmation_modal.cancel": "キャンセル",
   "confirmations.block.confirm": "ブロック",
