--- a/app/javascript/mastodon/locales/sr.json
+++ b/app/javascript/mastodon/locales/sr.json
@@ -61,7 +61,8 @@
   "compose_form.publish": "Тутни",
   "compose_form.publish_loud": "{publish}!",
   "compose_form.sensitive": "Обележи мултимедију као осетљиву",
-  "compose_form.spoiler": "Сакриј текст испод упозорења",
+  "compose_form.spoiler.marked": "Text is hidden behind warning",
+  "compose_form.spoiler.unmarked": "Text is not hidden",
   "compose_form.spoiler_placeholder": "Овде упишите упозорење",
   "confirmation_modal.cancel": "Поништи",
   "confirmations.block.confirm": "Блокирај",
