--- a/app/javascript/mastodon/locales/zh-TW.json
+++ b/app/javascript/mastodon/locales/zh-TW.json
@@ -61,7 +61,8 @@
   "compose_form.publish": "貼掉",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive": "將此媒體標為敏感",
-  "compose_form.spoiler": "將訊息隱藏在警告訊息之後",
+  "compose_form.spoiler.marked": "Text is hidden behind warning",
+  "compose_form.spoiler.unmarked": "Text is not hidden",
   "compose_form.spoiler_placeholder": "內容警告",
   "confirmation_modal.cancel": "取消",
   "confirmations.block.confirm": "封鎖",
