--- a/app/javascript/mastodon/locales/hu.json
+++ b/app/javascript/mastodon/locales/hu.json
@@ -60,7 +60,8 @@
   "compose_form.placeholder": "Mire gondolsz?",
   "compose_form.publish": "Tülk",
   "compose_form.publish_loud": "{publish}!",
-  "compose_form.sensitive": "Tartalom érzékenynek jelölése",
+  "compose_form.sensitive.marked": "Media is marked as sensitive",
+  "compose_form.sensitive.unmarked": "Media is not marked as sensitive",
   "compose_form.spoiler": "Szöveg figyelmeztetés mögé rejtése",
   "compose_form.spoiler_placeholder": "Figyelmeztetését írja ide",
   "confirmation_modal.cancel": "Bezár",
