--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -60,7 +60,8 @@
   "compose_form.placeholder": "今なにしてる？",
   "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}！",
-  "compose_form.sensitive": "メディアを閲覧注意としてマークする",
+  "compose_form.sensitive.marked": "メディアに閲覧注意が設定されています",
+  "compose_form.sensitive.unmarked": "メディアに閲覧注意が設定されていません",
   "compose_form.spoiler": "テキストを隠す",
   "compose_form.spoiler_placeholder": "ここに警告を書いてください",
   "confirmation_modal.cancel": "キャンセル",
