--- a/app/javascript/mastodon/locales/zh-CN.json
+++ b/app/javascript/mastodon/locales/zh-CN.json
@@ -60,7 +60,8 @@
   "compose_form.placeholder": "在想啥？",
   "compose_form.publish": "嘟嘟",
   "compose_form.publish_loud": "{publish}！",
-  "compose_form.sensitive": "将媒体文件标记为敏感内容",
+  "compose_form.sensitive.marked": "Media is marked as sensitive",
+  "compose_form.sensitive.unmarked": "Media is not marked as sensitive",
   "compose_form.spoiler": "折叠嘟文内容",
   "compose_form.spoiler_placeholder": "折叠部分的警告消息",
   "confirmation_modal.cancel": "取消",
