--- a/app/javascript/mastodon/locales/zh-HK.json
+++ b/app/javascript/mastodon/locales/zh-HK.json
@@ -60,7 +60,8 @@
   "compose_form.placeholder": "你在想甚麼？",
   "compose_form.publish": "發文",
   "compose_form.publish_loud": "{publish}！",
-  "compose_form.sensitive": "將媒體檔案標示為「敏感內容」",
+  "compose_form.sensitive.marked": "Media is marked as sensitive",
+  "compose_form.sensitive.unmarked": "Media is not marked as sensitive",
   "compose_form.spoiler": "將部份文字藏於警告訊息之後",
   "compose_form.spoiler_placeholder": "敏感警告訊息",
   "confirmation_modal.cancel": "取消",
