--- a/app/javascript/mastodon/locales/zh-TW.json
+++ b/app/javascript/mastodon/locales/zh-TW.json
@@ -60,7 +60,8 @@
   "compose_form.placeholder": "在想些什麼？",
   "compose_form.publish": "貼掉",
   "compose_form.publish_loud": "{publish}！",
-  "compose_form.sensitive": "將此媒體標為敏感",
+  "compose_form.sensitive.marked": "Media is marked as sensitive",
+  "compose_form.sensitive.unmarked": "Media is not marked as sensitive",
   "compose_form.spoiler": "將訊息隱藏在警告訊息之後",
   "compose_form.spoiler_placeholder": "內容警告",
   "confirmation_modal.cancel": "取消",
